hphp/hack/test/typecheck/void_usage_placeholder.php.exp
File "void_usage_placeholder.php", line 13, characters 8-10:
You are using the return value of a void function (Typing[4119])
File "void_usage_placeholder.php", line 9, characters 15-18:
A void function doesn't return a value
